fix: some visual gaps/"overbite" in ground and left building

--- a/client/src/app/StreetView.scss
+++ b/client/src/app/StreetView.scss
@@ -72,8 +72,9 @@
   }
 }
 
-.street-section-building-left canvas {
-  left: 0;
+// Slightly shift left building 1px to correct "overbite" over ground
+.street-segment-building-left canvas {
+  left: -1px;
 }
 
 .street-segment-building-right canvas {
